# Agent365

./: .env  .gitignore  AGENT_CREATION_PROMPT.md  AGENT_DEPLOYMENT_GUIDE.md  ARCHITECTURE_DIAGRAM.md  App.tsx  COLLABORATOR_GUIDE.md  FEATURES.md  GETTING_STARTED.md  HUMAN_IN_THE_LOOP_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  POSTGRES_MIGRATION_PLAN.md  README.md  _tmp_test_gemini_key.py  analyze_logs.py  check_database.py  create_more_agents.py  create_test_agents.py  debug_logs.txt  docker-compose.yml  error_output.txt  last_agent_code.py  metadata.json  package.json  run-app.ps1  run-app.sh  types.ts  update_agents_status.py
backend/agentgrid-backend/: .env.example  .gitignore  Dockerfile  README.md  TESTING_REVIEW_FEATURE.md  add_credits.py  agentgrid.db  alembic.ini  cleanup_agents.py  create_test_review_data.py  debug_agent_execution.py  debug_api_agents.py  debug_api_local.py  debug_list_agents.py  debug_output.txt  debug_pdf.py  debug_startup.py  debug_user_creation.py  fix_db.py  fix_seo_agent_config.py  fix_seo_agent_full.py  init_db.py  migration_error.txt  populate_db.py  pyproject.toml  read_results.py  requirements.txt  routes_debug.txt  run_seo_test.py  seed_agents.py  seo_results.txt  start.sh  test_app_import.py  test_bcrypt.py  test_capability.py  test_db_connection.py  test_direct_request.py  test_import_debug.py  test_other_endpoints.py  test_port_8001.py  (+6 more)
backend/agentgrid-backend/alembic/: env.py
backend/agentgrid-backend/app/: main.py
backend/agentgrid-backend/app/agents/: __init__.py  (+12 more)
backend/agentgrid-backend/tests/: conftest.py
(+338 files in other folders)
